--- a/css/portal.css
+++ b/css/portal.css
@@ -3,8 +3,8 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
 
 html {
-    background-color: lightgray;
-    font-family: 'Quicksand', sans-serif;
+    background-color: #b1a6a4;
+    font-family: 'Cormorant', serif;
     font-size: 0.95em;
     line-height: 1.5em;
 }
@@ -14,16 +14,22 @@ html {
     background: #ff0;
 }
 
-h1 {
-    font-weight: normal;
+
+.logo {
+    text-align: center;
+    font-family:'Cormorant' serif;
+    font-weight: bold;
     margin: auto;
-    background: #fff;
+    background: #f2f1ef;
     line-height: 2.5em;
+    
+       
 }
 
 main.wrapper {
-    background-color: white;
+    background-color:#f2f1ef;
     overflow: auto;
+    font-weight: 650;
 }
 
 p {
@@ -31,19 +37,22 @@ p {
 }
 
 h2,h3 {
-    font-weight: normal;
+    font-weight: bold;
     margin-left: 1em;
     line-height: 1em;
 }
 
 a {
-    color:darkcyan;
+    color:#b1a6a4;
     text-decoration: none;
+}
+hr{
+    color: #d8cdd0;
 }
 
 a:hover {
-    color: whitesmoke;
-    background-color: darkcyan;
+    color: rgb(171, 164, 164);
+    background-color: #b1a6a4;
     text-decoration: none;
 }
 
@@ -52,6 +61,7 @@ footer {
     text-align: center;
     padding: 1em;
 }
+
 
 /* Responsive rules */
 
@@ -68,7 +78,7 @@ footer {
     }
     
     picture.profile img {
-        width: 50%;
+        width: 40%;
         float: left;
         margin-right: 2em;
     }
